--- a/config/database.yml
+++ b/config/database.yml
@@ -80,7 +80,11 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see Rails configuration guide
+  # https://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: rails_twitter_app_production
   username: rails_twitter_app
   password: <%= ENV['RAILS_TWITTER_APP_DATABASE_PASSWORD'] %>
