--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,8 +1,9 @@
 # # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# one:
-#   name: MyString
-#   email: MyString
+michael:
+  name: Michael Example
+  email: michael@example.com
+  password_digest: <%= User.digest('password') %>
 
 # two:
 #   name: MyString
